before fetch covalent or post ipfs

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
      <div class="row">
-      <div class="col-md-12">
+
         <!-- <div class="alert alert-danger" id="alert-error-https" style="display: none">
           You can run this example only over HTTPS connection.
         </div> -->
@@ -76,11 +76,11 @@
         </div>
 
         <div id="connected" class="d-none">
-
+          div
         </div>
 
         <br>
-      </div>
+ 
     </div>
     <hr />
   
@@ -152,9 +152,17 @@
 
 
     <footer class="footer mt-auto py-2  bg-light fixed-bottom">
-      <div class="container">      
-        Made with <span style="color: #e25555;">&hearts;</span> by <a class="text-decoration-none" href="https://github.com/parseb">parseb</a>
-
+      <div class="container">
+        <div class="d-inline">
+          Made with <span style="color: #e25555;">&hearts;</span> by <a class="text-decoration-none" href="https://github.com/parseb">parseb</a>
+        </div>
+        <div class="d-inline" id="cashcowad">
+              | ad:  <a href="http://cashcow.guru" class="text-decoration-none"><b>cashcow.guru</b> "the best cashcows to get"</a>   
+        </div>
+        <div class="float-end" id="right-corner-footer">
+          
+        </div>
+        </div>
     </footer>
     
 
@@ -175,10 +183,8 @@
     <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
     <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/fortmatic@2.0.6/dist/fortmatic.js"></script>
-
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script> --
 
     <script type="text/javascript" src="js/main.js"></script>
-
   </body>
 </html>
