--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-4">
           <button class="btn btn-outline-dark float-end" id="btn-disconnect">
-            Disconnect wallet
+            Disconnect purse
           </button>
         </div>
       </div>
@@ -70,7 +70,7 @@
             </span>  
             <br>
             <span class="fs-5">
-              Connect wallet
+              Connect purse
             </span>
           </button>
         </div>
