before vest cow

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                       <div class="row">
                         <div class="mb-3">
                           <label for="formFile" class="form-label"><b>Project Description File</b></label>
-                          <input class="form-control" type="file" id="formFile">
+                          <input class="form-control" type="file" id="formFile" onclick='alert("file upload department is on vacation. act like you know")'>
                         </div>
                       </div>
                       <div class="row">
@@ -308,7 +308,7 @@
     <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
     <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"></script>
-    <script src="https://cdn.ethers.io/lib/ethers-5.6.umd.min.js" type="application/javascript"></script> --
+    <script src="https://cdn.ethers.io/lib/ethers-5.6.umd.min.js" type="application/javascript"></script> 
 
     <script type="text/javascript" src="js/main.js"></script>
   </body>
